# webServer

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.h.in~  config.status  configure.ac  configure.ac2  configure~
autom4te.cache/: output.1  output.2  traces.0  traces.1
cgi-bin/: cgi1.cgi  cgip8.c  p8.c  p8.cgi  proc  proc.cgi
data/: app2.db
data.examples/: app1.db
doc/: README.txt
include/: bdb.h  cgi.h  util.h
src/: Makefile  Makefile.am  Makefile.am2  Makefile.in  app1.c  app1.sh  app2.c  app2.sh  app3.c  app3.sh  appdata.c  bdb.c  cgi.c  cgi1.c  cgi1.sh  prueba_cgi.c  prueba_cgi.sh  server1.c  server1.sh  server2.c  server2.sh  util.c
src/.deps/: ___cgi_bin_cgi1_cgi-cgi.Po  ___cgi_bin_cgi1_cgi-cgi1.Po  ___wserver_appdata-appdata.Po  ___wserver_appdata-bdb.Po  ___wserver_appdata-util.Po  ___wserver_prueba_cgi-prueba_cgi.Po  ___wserver_server1-server1.Po  ___wserver_server1-util.Po  ___wserver_server2-server2.Po  ___wserver_server2-util.Po
testing/: README.txt  clifcgi1.c  clifcgi2.c  fcgi1.c
wserver/: MimeTypes.txt  MimeTypes.xlsx  app1.conf  app2.conf  appdata  prueba_cgi  server1  server1.conf  server2  server2.conf
www/: index.html  noesta.html
